fix: increase contrast for UnderlineNav divider

--- a/github.user.styl
+++ b/github.user.styl
@@ -973,7 +973,7 @@ for c, i in C {
             c: 0 ac0
         }
         &:focus, &:hover { c: 0 bg5 }
-        /.UnderlineNav { b: inset 0 -1px 0 bg3 }
+        /.UnderlineNav { b: inset 0 -1px 0 bg4 }
     }
 
     // Sub-navigation. @upstream
@@ -1374,7 +1374,7 @@ for c, i in C {
 
              /// Reset backgrounds for header and navigation.
             .js-header-wrapper { c: 0 0 bg3 }
-            main > :first-child { b: inset 0 -1px 0 bg3 }
+            main > :first-child { b: inset 0 -1px 0 bg4 }
         }
 
         /// Clippy in code blocks.
